# cppsim

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/core/: core.hpp  hardware.hpp  log.cpp  log.hpp
src/render/: window.cpp  window.hpp
src/render/asset/: model_loader.cpp  model_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/render/camera/: camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp
src/render/lightning/: light.hpp  point_light.hpp
src/render/opengl/: buffer.hpp  device.cpp  device.hpp  draw_call.cpp  draw_call.hpp  gl_shader.cpp  gl_shader.hpp  index_buffer.cpp  index_buffer.hpp  mesh.cpp  mesh.hpp  model.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
src/render/renderer/: forward_pass.cpp  forward_pass.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp
src/render/scene/: scene.hpp  scene_camera.cpp  scene_camera.hpp  scene_model.hpp  scene_node.hpp  transform.cpp  transform.hpp
src/render/shaders/: color.shader  shader_updates.cpp  shader_updates.hpp  texture copy.shader  texture.shader
src/util/: bits.hpp  frame_timer.cpp  frame_timer.hpp  hex.hpp  ring_buffer.hpp  rng.cpp  rng.hpp  timer.cpp  timer.hpp
test/: CMakeLists.txt  gtest_main.cpp  gtest_ring_buffer.cpp  gtest_util.cpp
